--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -38,7 +38,7 @@
     /* Page numbers strip */
     &-pages {
         position: absolute;
-        left: 28px;
+        left: 30px;
         right: 10px;
         bottom: 5px;
         height: 32px;
@@ -101,7 +101,7 @@
             }
         }
 
-        /* Muse interaction overlay */
+        /* Mouse interaction overlay */
         &-overlay {
             position: absolute;
             left: 4px;
@@ -117,7 +117,7 @@
             position: absolute;
             text-align: center;
             top: 5px;
-            left: 2px;
+            left: 1px;
             right: -2px;
             pointer-events: none;
         }
@@ -199,31 +199,31 @@
         }
     }
 
-    /* Scroll button */
+    /* Scroll buttons */
     &-scroll {
-        font-family: 'Wingdings 3';
+        /* Left scroll button */
         color: $foreground-color;
         text-shadow: none;
         background: $accent-light-color;
         border: $border-thickness solid $secondary-text-color;
         box-shadow: $border-thickness $border-thickness 0 $background-color inset;
-        width: 23px;
+        width: 25px;
         height: 27px;
 
-        /* Overrides for pushed state */
+        /* Left scroll button pushed state overrides */
         &.pushed {
             color: $background-color;
             box-shadow: $border-thickness $border-thickness 0 $shadow-dark-color inset;
         }
 
-        /* Left scroll button (uses primary button markup) */
+        /* Left scroll button */
         &-left {
             position: absolute;
             left: 10px;
             bottom: 10px;
         }
 
-        /* Overrides for primary button (left scroll button) */
+        /* Left scroll button - primary button overrides */
         .button-primary {
             &-content {
                 padding-left: 2px;
@@ -263,7 +263,7 @@
             }
         }
         
-        /* Overrides for primary button (left scroll button) pushed state */
+        /* Left scroll button - primary button pushed overrides */
         &.pushed {
             .button-primary {
                 &-leftcornerhighlight {
@@ -284,7 +284,7 @@
             }
         }
 
-        /* Right scroll button (uses page button markup) */
+        /* Right scroll button */
         &-right {
             position: relative;
             float: left;
@@ -358,7 +358,7 @@
         top: 10px;
     }
 
-    /* Overrides for collapsed state */
+    /* Collapsed state overrides */
     &.collapsed {
         height: 34px;
         margin-top: -2px;
@@ -385,10 +385,10 @@
 
             /* Pages strip */
             &-pages {
-                bottom: 3px;
+                bottom: -2px;
             }
 
-            /* Left scroll button */
+            /* Left scroll button - collapsed overrides */
             &-scroll .button-primary {
                 &-leftcorner {
                     border-top: $corner-small solid $background-color;
@@ -399,7 +399,8 @@
                 }
             }
 
-            &-scroll.button-primary {
+            /* Left scroll button - collapsed overrides */
+            &-scroll-left {
                 bottom: 3px;
             }
         }
