--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -50,27 +50,37 @@
         right: 10px;
         bottom: 5px;
         height: 32px;
-        font-family: $small-font;
-        font-size: $small-font-size;
         overflow: hidden;
         z-index: 200;
     }
 
     /* Page numbers strip overrides for PC */
-    .os-win &-pages {
+    .os-win &-page {
         font-size: $small-font-size-win;
     }
 
     /* Page number button */
     &-page {
+        display: block;
         position: relative;
         float: left;
         width: 35px;
-        height: 22px;
+        height: 27px;
         padding-left: 4px;
         padding-top: 5px;
-        margin-right: -8px;
+        margin-right: -4px;
         margin-bottom: 10px;
+        padding-bottom: 0;
+        font-family: $small-font;
+        font-size: $small-font-size;
+        color: $foreground-color;
+        border: none;
+        outline: none;
+        background: none;
+
+        &:hover {
+            color: $foreground-color;
+        }
 
         /* Bottom shadow */
         &:before {
@@ -106,11 +116,16 @@
             }
         }
 
+        /* Primitive fallback */
+        &-fallback {
+            display: none;
+        }
+
         /* Mouse interaction overlay */
         &-overlay {
             position: absolute;
             left: 4px;
-            right: 4px;
+            right: 0px;
             top: 0px;
             bottom: 0px;
             z-index: 2;
@@ -294,8 +309,11 @@
         &-right {
             position: relative;
             float: left;
-            width: 31px;
+            width: 35px;
             height: 27px;
+            border: none;
+            outline: none;
+            background: none;
             cursor: pointer;
 
             /* Bottom shadow */
