--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -1,6 +1,6 @@
 .date-selector {
     position: relative;
-    height: 100px;
+    height: 130px;
 
     /* Background rectangle */
     &-background {
@@ -37,10 +37,12 @@
 
     /* Graph view */
     &-view {
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-top: 30px;
-        margin-bottom: 32px;
+        position: absolute;
+        left: 10px;
+        right: 10px;
+        top: 30px;
+        bottom: 40px;
+        overflow-x: hidden;
     }
 
     /* Page numbers strip */
