--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -1,6 +1,6 @@
 .date-selector {
     position: relative;
-    height: 130px;
+    height: 134px;
 
     /* Background rectangle */
     &-background {
@@ -20,7 +20,7 @@
             border-style: solid;
             border-color: $background-color transparent transparent $background-color;
             left: 0;
-            top: 0%;
+            top: 0;
         }
 
         /* Bottom right corner cut-off */
@@ -38,10 +38,10 @@
     /* Graph view */
     &-view {
         position: absolute;
-        left: 10px;
+        left: 16px;
         right: 10px;
-        top: 30px;
-        bottom: 40px;
+        top: 26px;
+        bottom: 45px;
         overflow-x: hidden;
     }
 
