--- a/src/Styles/_tags.scss
+++ b/src/Styles/_tags.scss
@@ -156,21 +156,53 @@ $crafts:      #67d5e9;
   }
 }
 
+.tag-page {
+  position: absolute;
+  top: 0px;
+  bottom: 13px;
+  width: 89px;
+  border-bottom: 2px solid $accent-color;
+
+  &:hover {
+    border-bottom: 2px solid $primary-color;
+  }
+
+  &-footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding-top: 2px;
+    top: 100%;
+    text-align: center;
+    font-family: $small-font;
+    font-size: $small-font-size - 2;
+    color: $drop-shadow-light-color;
+  }
+
+  &-separator {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    border-right: 1px dashed $border-color;
+  }
+}
+
 .tag-bar {
   position: absolute;
-  top: 5px;
-  bottom: 16px;
+  top: 8px;
+  bottom: 2px;
   min-width: 22px;
-  cursor: pointer;
 }
 
 .tag-block {
   position: absolute;
   width: 16px;
-  min-height: 2px;
+  min-height: 4px;
   border: 2px solid $accent-light-color;
   border-top: 1px solid $accent-light-color;
   border-bottom: 1px solid $accent-light-color;
+  cursor: pointer;
 
   &:last-child {
     border-top: 2px solid $accent-light-color;
@@ -194,7 +226,7 @@ $crafts:      #67d5e9;
       left: -2px;
       right: -2px;
       bottom: -2px;
-      box-shadow: 0px 0px 0px 2px $accent-hover-color;
+      box-shadow: 0px 0px 4px 0px $drop-shadow-light-color;
       z-index: -1;
     }
 
